
h3. User-Visible Changes

h3. Specifier-Visible Changes

* <span class="label label-info">Modified</span> When using ELK, the routing style of edges is now considered. It was ignored before. You can refer to the "Use an ELK layout algorithm/Specific rules for routing style of edges":specifier/diagrams/Diagrams.html#elkRoutingStyleRules for more details.

h3. Developer-Visible Changes

h4. Migrations

* <span class="label label-success">Added</span> A migration participant, EmptyJunctionPointsStringValueStyleMigrationParticipant,  has been added to fix the GMF edges that contain an empty "junctionPoints" StringValueStyle. These empty "junctionPoints" StringValueStyle were created due to a bug in ELK./Sirius integration. This migration participant simply removes the empty "junctionPoints" StringValueStyle. As reminder, this migration participant has been introduced in Sirius 7.4.3. The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is _15.4.3.202406261640_.

h2(#sirius7.4.2). Changes in Sirius Desktop 7.4.2

h3. User-Visible Changes

* <span class="label label-info">Modified</span> A "regression":https://github.com/eclipse-sirius/sirius-desktop/issues/419 introduced in 7.4.1 which prevented the dirty state marker (*) to be displayed in the model explorer in some cases has been fixed. 

h3. Specifier-Visible Changes

h3. Developer-Visible Changes

h4. Migrations

h2(#sirius7.4.1). Changes in Sirius  Desktop 7.4.1

h3. User-Visible Changes

* <span class="label label-info">Modified</span> The UI preference @SiriusUIPreferencesKeys.PREF_DISPLAY_VSM_USER_FIXED_COLOR_IN_PALETTE@ has been renamed from "Display viewpoints colors" to "Display suggested colors in color palette". 

h3. Specifier-Visible Changes

h3. Developer-Visible Changes

h4. Changes in @org.eclipse.sirius.diagram.ui@
