@@ -26,4 +26,5 @@ ELK090MigrationParticipant_rectPacking_rename_optimization_goal=\t* The "optimiz
 ELK090MigrationParticipant_rectPacking_rename_target_width=\t* The "targetWidth" is now set via "widthApproximation.targetWidth". This has been automatically changed in your configuration. Warning: This option is now enabled by setting the "widthApproximation.strategy", you have to do it manually. 
 ELK090MigrationParticipant_rectPacking_title=* In ELK rectpacking configuration of diagram "{0}", because of restructuring and improvement in ELK 0.9.0, several options of this layout have been impacted:
 ELK090MigrationParticipant_title=Migration done for "ELK 0.8.0/0.9.0 configuration changes": Some options used in your VSM have been changed in ELK 0.8.0 or 0.9.0 because they have been renamed or removed in ELK. You should analyzed this information carefully and read the release notes of ELK.
+ElkDiagramLayoutTracer_defaultJavaFolderWillBeUsedMsg=A problem occurs during resolving the property system "{0}". The Java temporary folder, "{1}", will be used by default.
 ElkDiagramLayoutTracer_saveNotPossible=Impossible to save the diagram in "{0}".
