@@ -14,12 +14,15 @@ package org.eclipse.sirius.diagram.elk;
 
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.text.MessageFormat;
 import java.util.Collections;
 
+import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.ILog;
 import org.eclipse.core.runtime.Platform;
+import org.eclipse.core.variables.VariablesPlugin;
 import org.eclipse.elk.core.options.CoreOptions;
 import org.eclipse.elk.graph.ElkNode;
 import org.eclipse.emf.common.util.URI;
@@ -33,19 +36,50 @@ import org.eclipse.sirius.common.tools.api.util.StringUtil;
 /**
  * Tracer of diagram layout.
  * <p>
- * This tracer saves ELK Graph as XMI or textual format in a file.
+ * This tracer saves ELK Graph as XMI or textual format in a file. File location depends of the value of the system
+ * property {@value #TARGET_FOLDER_PATH_SYSTEM_PROPERTY_KEY}.
  * </p>
  *
  * @author nperansin
  */
 public class ElkDiagramLayoutTracer {
 
-    // Built-in Java property.
+    /**
+     * The name of the system property to define the target folder path used to store the trace files (exported files
+     * for example). The value of this variable can contains <a href=
+     * "https://help.eclipse.org/latest/index.jsp?topic=%2Forg.eclipse.cdt.doc.user%2Ftasks%2Fcdt_t_variables.htm">variables
+     * names</a>, like in the definition of the workspace data folder in a launch configuration. For example:
+     * <UL>
+     * <LI>${container_loc}: Returns the absolute file system path of the session's container (container of the AIRD
+     * file),</LI>
+     * <LI>${project_loc}: Returns the absolute file system path of a session's project,</LI>
+     * <LI>or ${workspace_loc}: Returns the absolute file system path of the workspace root.</LI>
+     * </UL>
+     * <UL>
+     * If this system property is not set or contains error, the Java temp folder is used as target folder. <BR/>
+     * <B>Warning:</B> If you use a the "VM arguments" field in the launch configuration, you must replace the "$" by a
+     * "%" to avoid a replacement of the variables during the launch (and not by ElkDiagramLayoutTracer during export).
+     */
+    public static final String TARGET_FOLDER_PATH_SYSTEM_PROPERTY_KEY = "org.eclipse.sirius.diagram.elk.targetFolderPath"; //$NON-NLS-1$
+
     private static String JAVA_TEMP_DIR_PROPERTY_NAME = "java.io.tmpdir"; //$NON-NLS-1$
 
     private static String XMI_EXTENSION = ".elkg"; //$NON-NLS-1$
 
     private static ILog LOGGER = Platform.getLog(ElkDiagramLayoutTracer.class);
+
+    /**
+     * The target folder path used to store the trace files (exported files for example). It can contains variables
+     * names such as:
+     * <UL>
+     * <LI>${container_loc}: Returns the absolute file system path of the session's container (container of the AIRD
+     * file),</LI>
+     * <LI>${project_loc}: Returns the absolute file system path of a session's project,</LI>
+     * <LI>or ${workspace_loc}: Returns the absolute file system path of the workspace root.</LI>
+     * </UL>
+     * These variables will be interpreted when necessary (for example before exporting a diagram as text).
+     */
+    private final String targetFolderPath;
 
     private final boolean inDebug;
 
@@ -57,6 +91,22 @@ public class ElkDiagramLayoutTracer {
      */
     public ElkDiagramLayoutTracer(boolean debug) {
         this.inDebug = debug;
+
+        // Get export folder path (through specific system property or by using Java temporary folder)
+        String value = System.getProperty(TARGET_FOLDER_PATH_SYSTEM_PROPERTY_KEY);
+        if (value == null || value.trim().isEmpty()) {
+            targetFolderPath = System.getProperty(JAVA_TEMP_DIR_PROPERTY_NAME);
+        } else {
+            // % can be used instead of $ in the value to avoid to be replaced by the variables system during launch (and not by ElkDiagramLayoutTracer during export)
+            targetFolderPath = value.trim().replaceAll("%\\{", "\\$\\{"); //$NON-NLS-1$ //$NON-NLS-2$
+        }
+    }
+
+    private static String getFilename(final String diagramName, final String suffix, String extension) {
+        if (StringUtil.isEmpty(suffix)) {
+            return diagramName + extension;
+        }
+        return diagramName + '_' + suffix + extension;
     }
 
     /**
@@ -76,18 +126,31 @@ public class ElkDiagramLayoutTracer {
     }
 
     private Path getTargetFile(String diagramName, String suffix, String extension) {
-        String fileName;
-        if (StringUtil.isEmpty(suffix)) {
-            fileName = diagramName + extension;
-        } else {
-            fileName = diagramName + "_" + suffix + extension; //$NON-NLS-1$
+        Exception exceptionThrown = null;
+        String abosluteExportFolderPath;
+        try {
+            abosluteExportFolderPath = VariablesPlugin.getDefault().getStringVariableManager().performStringSubstitution(targetFolderPath);
+        } catch (CoreException e) {
+            // Default location will be used
+            exceptionThrown = e;
+            abosluteExportFolderPath = System.getProperty(JAVA_TEMP_DIR_PROPERTY_NAME);
         }
-        Path path = Path.of(System.getProperty(JAVA_TEMP_DIR_PROPERTY_NAME) + fileName);
-        return path;
+        Path parentPath;
+        try {
+            parentPath = Path.of(abosluteExportFolderPath);
+        } catch (InvalidPathException e) {
+            // Default location will be used
+            exceptionThrown = e;
+            parentPath = Path.of(System.getProperty(JAVA_TEMP_DIR_PROPERTY_NAME));
+        }
+        if (exceptionThrown != null) {
+            LOGGER.warn(MessageFormat.format(Messages.ElkDiagramLayoutTracer_defaultJavaFolderWillBeUsedMsg, TARGET_FOLDER_PATH_SYSTEM_PROPERTY_KEY, JAVA_TEMP_DIR_PROPERTY_NAME), exceptionThrown);
+        }
+        return parentPath.resolve(getFilename(diagramName, suffix, extension));
     }
 
     /**
-     * Exports the given layout graph in a file.
+     * Exports the given layout graph in a file. The file will be saved in the provided directory.
      * <p>
      * If the folder does not exist, it may be created even if the export fails.
      * </p>
@@ -106,8 +169,8 @@ public class ElkDiagramLayoutTracer {
     }
 
     /**
-     * Return a copy of the inputGraph with some necessary cleanup before serialization. The copy avoids side effects on
-     * the inputGraph.
+     * Returns a copy of the inputGraph with any necessary cleanups before serialization. The copy avoids side effects
+     * on the inputGraph.
      * 
      * @param inputGraph
      *            The graph to copy and cleanup.
